--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,16 +3,23 @@ project(Project)
 
 set(CMAKE_CXX_STANDARD 17)
 
+##THESE FLAGS MUST BE SET
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lmingw32")
+set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
+
+
 ##THIS IS WHERE THE FIND.cmake FILES ARE
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
-##THIS IS WHERE ALL SDL PACKAGES ARE INSTALLED
-set(SDL2_PATH "C:/SDL") ##THIS MUST BE SET ON WINDOWS
 
 ##THESE USE THE CMAKE FILES TO FIND THE SDL2 PACKAGES
 find_package(SDL2 REQUIRED)
 find_package(SDL2_mixer REQUIRED)
 find_package(SDL2_image REQUIRED)
 find_package(SDL2_ttf REQUIRED)
+
+##THIS IS WHERE ALL SDL PACKAGES ARE INSTALLED
+set(SDL2_PATH "C:/SDL") ##THIS MUST BE SET ON WINDOWS
+
 
 ##DIRECTORIES FOR SDL INCLUDES GO HERE
 include_directories(${SDL2_INCLUDE_DIR}
